# sauerkraut

./: CMakeLists.txt  README.md
include/sauerkraut/: Algo.hpp
src/: Algo.cpp
src/Algo/: Algo.cpp
src/Toplevel/: CMakeLists.txt  Main.cpp
unittest/: CMakeLists.txt  tAll.cpp  tHardcode.cpp  tSerialGolding.cpp
